syntax = "proto3";

package measurements.v1;

service Measurements {
  rpc GetMeasurements (GetMeasurementsRequest) returns (GetMeasurementsResponse);
}

message GetMeasurementsRequest {
    string subject = 1;
    string actor = 2;

	string gsrn = 3;
	int64 dateFrom = 4;
	int64 dateTo = 5;
}

message GetMeasurementsResponse {
	repeated Measurement measurements = 1;
}

message Measurement {
	string gsrn = 1;
	int64 dateFrom = 2;
	int64 dateTo = 3;
	int64 quantity = 4;
	EnergyQuantityValueQuality quality = 5;
}

enum EnergyQuantityValueQuality {
    MEASURED = 0;
    REVISED = 1;
    CALCULATED = 2;
	ESTIMATED = 3;
}
